archive/도커심화_한권으로_배우는_도커_&_쿠버네티스/ch10/ex03/django-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-django
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: web-deploy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-deploy
    spec:
      containers: 
      - name: nginx-d	
        image: eeveek8s/mynginxd_ch10:0.3
        ports:
        - containerPort: 80

      - name: django-web
        image: eeveek8s/mydjango_ch10:0.2
        ports:
        - containerPort: 8000
