archive/도커심화_한권으로_배우는_도커_&_쿠버네티스/ch10/ex03/django-flask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-flask-ingress	
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx	
  rules:
  - http:
      paths:
      - path: /test01(/|$)(.*)	
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80

      - path: /test02(/|$)(.*)	
        pathType: Prefix
        backend:
          service:
            name: flask-service	
            port:
              number: 80
